zigbee2mqtt/mqtt-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt
  namespace: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      containers:
      - name: mqtt
        image: eclipse-mosquitto:2.0
        ports:
          - containerPort: 1883
            protocol: TCP
          - containerPort: 9001
            protocol: TCP
        volumeMounts:
          - mountPath: /mosquitto/data
            name: mosquitto-data
          - name: mosquitto-config
            mountPath: /mosquitto/config/mosquitto.conf
            subPath: mosquitto.conf
      restartPolicy: Always
      volumes:
        - name: mosquitto-data
          persistentVolumeClaim:
            claimName: mosquitto-data
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
