zigbee2mqtt/zigbee2mqtt-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
      - name: zigbee2mqtt
        image: koenkk/zigbee2mqtt:1.42.0
        ports:
          - containerPort: 8080
            protocol: TCP
        volumeMounts:
          - name: zigbee2mqtt-config
            mountPath: /app/data # must be located in /app/data
          - name: zigbee2mqtt-data
            mountPath: /data
          - name: udev
            mountPath: /run/udev
            readOnly: true
          - name: usb
            mountPath: /dev/ttyUSB0
        securityContext:
          privileged: true
      nodeSelector:
        zigbee-usb: "true"
      restartPolicy: Always
      volumes:
        - name: zigbee2mqtt-config
          configMap:
            name: zigbee2mqtt-config
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
        - name: udev
          hostPath:
            path: /run/udev
        - name: usb
          hostPath:
            path: /dev/ttyUSB0
