zigbee2mqtt/mqtt-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mqtt
  namespace: zigbee2mqtt
spec:
  selector:
    app: mqtt
  ports:
  - port: 1883
    targetPort: 1883
    name: mqtt
  - port: 9001
    targetPort: 9001
    name: wss
  type: LoadBalancer
