zigbee2mqtt/zigbee2mqtt-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
spec:
  selector:
    app: zigbee2mqtt
  ports:
  - port: 8080
    targetPort: 8080
