zigbee2mqtt/zigbee2mqtt-ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`zigbee.home.coleduclos.io`)
      services:
        - name: zigbee2mqtt
          port: 8080
  tls:
    secretName: zigbee2mqtt-ingressroute-certificate-secret
